# jade

./: .buildinfo  .dockerignore  .git-blame-ignore-revs  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE  MANIFEST.in  README.md  advanced_usage.html  api.html  build_docs.html  conda_build.sh  data_models.html  design.html  dev-environment.yml  dev-requirements.txt  distributed_submission.html  environment.yml  faq.html  genindex.html  hpc_config.toml  index.html  installation.html  jade.html  job_configuration.html  objects.inv  pipeline.html  py-modindex.html  pyproject.toml  quickstart.html  requirements.txt  results_queries.html  search.html  searchindex.js  setup.py  singularity_containers.html  spark_jobs.html  submission_strategies.html  tox.ini  (+1 more)
_autosummary/: jade.cli.auto_config.html  jade.cli.cancel_jobs.html  jade.cli.cluster.html  jade.cli.collect_stats.find_process_ids.html  jade.cli.collect_stats.get_process_id_mapping.html  jade.cli.collect_stats.get_process_mapping_name.html  jade.cli.collect_stats.html  jade.cli.collect_stats.sigterm_handler.html  jade.cli.common.add_options.html  jade.cli.common.handle_enum_input.html  jade.cli.common.html  jade.cli.common.make_submitter_params.html  jade.cli.common.proceed_with_user_permission.html  jade.cli.config.html  jade.cli.db.create_event_table.html  jade.cli.db.create_resource_stats_table.html  jade.cli.db.create_result_table.html  jade.cli.db.html  jade.cli.extensions.html  jade.cli.hpc_jobs.get_nrel_eagle_aus.html  jade.cli.hpc_jobs.html  jade.cli.html  jade.cli.jade.html  jade.cli.jade_internal.html  jade.cli.pipeline.html  jade.cli.prune_files.html  (+251 more)
(+660 files in other folders)
