[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "NREL-jade"
dynamic = ["version"]
description = "Provides HPC workflow automation services"
readme = "README.md"
icense = {file = "LICENSE"}
requires-python = ">=3.7"
maintainers = [
    { name = "Daniel Thom", email = "daniel.thom@nrel.gov" },
]
keywords = [
    "hpc",
    "jade",
    "workflow",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: OSI Approved :: BSD License",
    "Natural Language :: English",
    "Programming Language :: Python :: 3.7",
]
dependencies = [
    "click",
    "filelock",
    "numpy",
    "pandas",
    "plotly",
    "prettytable",
    "psutil",
    "pyarrow",
    "pydantic~=2.5.2",
    "requests",
    "tabulate",
    "toml>=0.10.0",
]

[project.optional-dependencies]
dataframe_utils = [
    "tables",
]
demo = [
    "matplotlib",
    "statsmodels",
]
dev = [
    "black",
    "flake8",
    "ghp-import",
    "matplotlib",
    "mock>=3.0.0",
    "pre-commit",
    "pycodestyle",
    "pylint",
    "pypandoc",
    "pytest",
    "pytest-cov",
    "sphinx-rtd-theme>=0.4.3",
    "sphinx>=2.0",
    "sphinxcontrib-plantuml",
    "statsmodels",
    "tables",
    "tox",
]

[project.scripts]
jade = "jade.cli.jade:cli"
jade-internal = "jade.cli.jade_internal:cli"

[project.urls]
Homepage = "https://github.com./NREL/jade"

[tool.hatch.version]
path = "jade/__init__.py"

[tool.hatch.build.targets.sdist]
include = [
    "/jade",
]

[tool.black]
line-length = 99
target-version = ['py38']
